--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.1' apply false
-    id 'com.android.library' version '7.4.1' apply false
+    id 'com.android.application' version '7.1.0' apply false
+    id 'com.android.library' version '7.1.0' apply false
+    id 'com.google.gms.google-services' version '4.3.0' apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
