--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,15 +16,6 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    dependencies {
-        // ...
-        implementation 'com.google.firebase:firebase-firestore:23.0.3'
-        implementation 'com.google.android.gms:play-services-tasks:17.0.2'
-
-    }
-
-
-
 
     buildTypes {
         release {
@@ -32,17 +23,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-database:20.0.1'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -50,8 +42,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.5.0'
-    implementation 'com.google.firebase:firebase-firestore:24.1.1'
+    implementation 'com.google.firebase:firebase-firestore:24.5.0'
+    implementation 'com.google.android.gms:play-services-tasks:17.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:<2.1.3>'
+
+
+    // Testing dependencies
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
