--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,19 @@
         android:theme="@style/Theme.Meetworkshop"
         tools:targetApi="31">
         <activity
-            android:name=".HomeOrgActivity"
+            android:name="com.example.meet_workshop.homepage.homeactivist.NewPost"
+            android:exported="false" />
+        <activity
+            android:name="com.example.meet_workshop.homepage.homeactivist.VideoPage"
+            android:exported="false" />
+        <activity
+            android:name="com.example.meet_workshop.homepage.homeactivist.UserProfile"
+            android:exported="false" />
+        <activity
+            android:name="com.example.meet_workshop.homepage.homeactivist.SearchPage"
+            android:exported="false" />
+        <activity
+            android:name=".homepage.homeorganization.HomeOrgActivity"
             android:exported="false" />
         <activity
             android:name=".UserProfileActivity"
@@ -27,7 +39,7 @@
             android:name=".ActivityInterests"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".homepage.homeactivist.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".SignUpActivity"
