--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,20 +32,34 @@ android {
     buildFeatures {
         viewBinding true
     }
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
+        }
+    }
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-firestore:24.5.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.4'
+    implementation 'com.google.firebase:firebase-firestore:24.5.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    // Navigation dependencies (optional)
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
-    implementation 'com.google.firebase:firebase-firestore:24.5.0'
-    implementation 'com.google.android.gms:play-services-tasks:17.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:<2.1.3>'
-
 
     // Testing dependencies
     testImplementation 'junit:junit:4.13.2'
