--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.meet_workshop">
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -11,17 +16,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Meetworkshop"
         tools:targetApi="31">
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
-            android:name="com.example.meet_workshop.homepage.homeactivist.NewPost"
+            android:name=".homepage.homeactivist.AddPostActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.meet_workshop.homepage.homeactivist.VideoPage"
+            android:name=".homepage.homeactivist.VideoPage"
             android:exported="false" />
         <activity
-            android:name="com.example.meet_workshop.homepage.homeactivist.UserProfile"
+            android:name=".homepage.homeactivist.UserProfile"
             android:exported="false" />
         <activity
-            android:name="com.example.meet_workshop.homepage.homeactivist.SearchPage"
+            android:name=".homepage.homeactivist.SearchPage"
             android:exported="false" />
         <activity
             android:name=".homepage.homeorganization.HomeOrgActivity"
