--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.5.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.google.android.material:material:1.4.+'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'io.coil-kt:coil:1.4.0'
 
     // Navigation dependencies (optional)
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
