--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,13 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,6 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Meetworkshop"
         tools:targetApi="31">
+        <activity
+            android:name=".homepage.homeactivist.EditProfilePictureActivity"
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -43,15 +51,11 @@
             android:name=".homepage.homeorganization.HomeOrgActivity"
             android:exported="false" />
         <activity
-            android:name=".homepage.homeorganization.UserProfileActivity"
-            android:exported="false" />
-        <activity
             android:name=".SignUpOrganizationActivity"
             android:exported="false" />
         <activity
             android:name=".OrgOrActActivity"
             android:exported="false" />
-
         <activity
             android:name=".ActivityInterests"
             android:exported="false" />
