--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //navbar chip watan added it
+    implementation 'com.github.ismaeldivita:chip-navigation-bar:1.3.3'
+
 }
