--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ android {
 }
 
 dependencies {
+
+
+    implementation 'androidx.constraintlayout:constraintlayout:<2.1.4>'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
