--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,17 +16,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Meetworkshop"
         tools:targetApi="31">
-
+        <activity
+            android:name=".homepage.homeorganization.CampaignManagementOrgActivity"
+            android:exported="false" />
+        <activity
+            android:name=".homepage.homeorganization.AddEventOrgActivity"
+            android:exported="false" />
+        <activity
+            android:name=".homepage.homeorganization.UserProfileOrgActivity"
+            android:exported="false" />
         <activity
             android:name=".OnboardingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".homepage.homeactivist.EditProfilePictureActivity"
             android:exported="false" />
@@ -73,9 +80,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
