--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,20 @@ android {
 dependencies {
 
 
+
+
+    implementation 'com.github.yalantis:ucrop:2.2.6-native'
+    implementation 'com.android.support:support-annotations:28.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'com.github.arthurhub:android-image-cropper:2.8.0'
+
+    implementation 'com.github.yalantis:ucrop:2.2.6'
+
     implementation 'androidx.constraintlayout:constraintlayout:<2.1.4>'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
