--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,12 @@ android {
 
 dependencies {
 
+    implementation 'com.github.yalantis:ucrop:2.2.7'
+    implementation 'com.google.firebase:firebase-firestore:23.0.3'
+    implementation 'com.github.yalantis:ucrop:2.2.6'
 
 
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
 
     implementation 'com.github.yalantis:ucrop:2.2.6-native'
     implementation 'com.android.support:support-annotations:28.0.0'
