--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Meetworkshop"
         tools:targetApi="31">
-
+        <activity
+            android:name=".SubscriptionServiceOrgActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CampaignAnalyticsOrgActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AudienceAnalysisOrgActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PolicePermitOrgActivity"
+            android:exported="false" />
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-
-
         <activity
-            android:name="com.example.meet_workshop.homepage.homeorganization.EditProfilePictureOrgActivity"
+            android:name=".EditProfilePictureOrgActivity"
             android:exported="false" />
-
         <activity
             android:name=".homepage.homeorganization.CampaignManagementOrgActivity"
             android:exported="false" />
