--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,26 +40,21 @@ android {
 }
 
 dependencies {
-
+    implementation 'pub.devrel:easypermissions:2.0.1'
+    implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.yalantis:ucrop:2.2.7'
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
     implementation 'com.github.yalantis:ucrop:2.2.6'
-
-
     implementation 'com.google.firebase:firebase-storage:20.0.0'
-
     implementation 'com.github.yalantis:ucrop:2.2.6-native'
     implementation 'com.android.support:support-annotations:28.0.0'
-
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
     implementation 'com.github.arthurhub:android-image-cropper:2.8.0'
-
     implementation 'com.github.yalantis:ucrop:2.2.6'
-
     implementation 'androidx.constraintlayout:constraintlayout:<2.1.4>'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
@@ -79,17 +74,13 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'io.coil-kt:coil:1.4.0'
-
     // Navigation dependencies (optional)
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
-
-
     // Testing dependencies
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     //navbar chip watan added it
     implementation 'com.github.ismaeldivita:chip-navigation-bar:1.3.3'
 
