--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'pub.devrel:easypermissions:2.0.1'
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
