--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.meet_workshop">
 
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="29"
+        tools:ignore="ScopedStorage"
+        />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -23,6 +29,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Meetworkshop"
         tools:targetApi="31">
+
+        <activity
+            android:name=".homepage.homeorganization.SearchActivityOrg"
+            android:exported="false"
+            android:label="@string/title_activity_search_org"
+            android:theme="@style/Theme.Meetworkshop.NoActionBar" />
         <activity
             android:name=".homepage.homeorganization.ChooseLocationActivity"
             android:exported="false" />
@@ -73,6 +85,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyA1kNteDTIj_tlfCSwI-0vhWq0o8d81Akw" />
@@ -94,6 +107,12 @@
             android:exported="false" />
         <activity
             android:name=".ActivityInterests"
+            android:exported="false" />
+        <activity
+            android:name=".homepage.homeactivist.NotificationActivityActivist"
+            android:exported="false" />
+        <activity
+            android:name=".homepage.homeactivist.SearchActivityActivist"
             android:exported="false" />
         <activity
             android:name=".homepage.homeactivist.HomeActivity"
