edit android manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,6 +124,9 @@
             android:name=".homepage.homeactivist.HomeActivity"
             android:exported="false" />
         <activity
+            android:name=".ShowPostActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
