--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.yalantis:ucrop:2.2.6'
     implementation 'com.github.yalantis:ucrop:2.2.4'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
