bro watan laptop is shit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,17 @@
         android:theme="@style/Theme.Meetworkshop"
         tools:targetApi="31">
         <activity
-            android:name=".StartEveryThing"
+            android:name=".homepage.homeactivist.DiscoverClickedCategoryActivist"
             android:exported="false" />
+        <activity
+            android:name=".StartEveryThing"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -77,9 +86,7 @@
             android:exported="false" />
         <activity
             android:name=".OnboardingActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".homepage.homeactivist.EditProfilePictureActivity"
             android:exported="false" />
@@ -113,11 +120,6 @@
         <activity
             android:name=".OrgOrActActivity"
             android:exported="false" />
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
         <activity
             android:name=".ActivityInterests"
             android:exported="false" />
