--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.github.yalantis:ucrop:2.2.6'
     implementation 'com.github.yalantis:ucrop:2.2.4'
     implementation 'androidx.appcompat:appcompat:1.1.0'
