added settings page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         android:theme="@style/Theme.Meetworkshop"
         tools:targetApi="31">
         <activity
+            android:name=".homepage.homeactivist.SettingsPageActivist"
+            android:exported="false" />
+        <activity
             android:name=".ThankYouActivity"
             android:exported="false" />
         <activity
