--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
+        android:supportsRtl="false"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:screenOrientation="portrait"
-        android:supportsRtl="true"
         android:theme="@style/Theme.Meetworkshop"
         tools:targetApi="31">
         <activity
